--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
 
       - run: mix deps.get
       - run: mix compile --warnings-as-errors
+      - run: mix docs.check
       - run: mix test
       - run: mix format --check-formatted
       - run: mix credo --strict
